# Nota

./: .editorconfig  .gitignore  .prettierignore  LICENSE  README.md  REPORT.md  biome.jsonc  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json  svelte.config.js  tailwind.config.ts  vite.config.js  vite.config.ts  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  desktop-ci.yml  desktop-mac-release.yml  desktop-release.yml  format.yml  releases.yml  testing.yml  update-homebrew-tap.yml  web-ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  biome.jsonc  drizzle.config.ts  go.mod  go.sum  main.go  package.json
apps/backend-hono/: README.md  drizzle.config.ts  package.json
apps/backend-hono/drizzle/: 0000_absent_vertigo.sql  0002_add_json_patch_func.sql  0002_common_guardian.sql  0003_tense_blindfold.sql  0004_nappy_ben_parker.sql  0005_delete_revoked_sessions.sql  0005_strong_piledriver.sql  0006_fat_johnny_blaze.sql  0007_glossy_hairball.sql
apps/backend-hono/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  0005_snapshot.json  0007_snapshot.json  0008_snapshot.json  _journal.json
apps/backend-hono/src/: constants.ts  index.ts
apps/backend-hono/src/app/: index.ts
apps/backend-hono/src/db/: index.ts
apps/backend-hono/src/lib/: jwt.ts
apps/backend-hono/src/logging/: index.ts
apps/backend/app/: ai.go  auth.go  notes.go  payments.go  promotions.go  sessions.go  storage.go  user.go  userworkspace.go  workspace.go
apps/backend/config/: constants.go
apps/backend/db/: pg.go  sessions.go  user.go  valkey.go
apps/backend/drizzle/: 0000_bumpy_talisman.sql  0001_legal_scourge.sql  0008_cuddly_mandarin.sql
apps/backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0006_snapshot.json  0007_snapshot.json  0009_snapshot.json  _journal.json
apps/backend/middleware/: auth.go  auth_test.go  ban.go  checkpro.go  logger.go  security.go
apps/backend/models/: assets.go  auth.go  notes.go  oauth.go  response.go  sessions.go  user.go  user_test.go  workspaces.go
apps/backend/routes/: ai.go  auth.go  main.go  notes.go  payments.go  sessions.go  storage.go  user.go  userworkspace.go  workspace.go
apps/backend/src/: auth.ts  constants.ts  index.ts
apps/backend/src/app/: index.ts
apps/backend/src/db/: index.ts  schema.ts
apps/backend/src/lib/: jwt.ts  storage.ts
apps/backend/src/logging/: index.ts
apps/backend/src/payment/: index.ts
apps/backend/test/: notes_test.go  payments_test.go  sessions_test.go  storage_test.go  user_test.go  userworkspace_test.go  workspace_test.go
apps/backend/tests/: health.test.ts  notes.test.ts  user.test.ts  userworkspaces.test.ts
apps/backend/testutils/: testutils.go
apps/backend/utils/: cache.go  client_info.go  geolocation.go  jwt.go  oauth.go  storage.go
apps/desktop/: biome.jsonc  package.json  svelte.config.js  vite.config.js
apps/desktop/src/: app.css  app.html  hooks.client.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: stronghold.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/: contants.ts  currentworkspace.svelte.ts  handleOAuth.svelte.ts  handleOAuth.ts  menu.ts  theme.ts  updater.ts  utils.ts
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/: .env.example  .gitignore  biome.jsonc  package.json  skills-lock.json  svelte.config.js  vite.config.ts  wrangler.jsonc
apps/web/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
apps/web/src/lib/: types.ts  utils.ts  (+1 more)
apps/web/static/: robots.txt  sitemap.xml
src/: app.css  app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: appMenu.ts  app_menu.ts  app_settings.ts  contants.ts  handleOAuth.svelte.ts  handleOAuth.ts  recents.svelte.ts  recents.ts  theme.ts  types.ts  updater.ts  utils.ts  workspaces.svelte.ts
src/lib/artifact/: artifact-downloader.svelte  artifacts.ts
src/lib/database/: notes.ts  sqldb.ts  workspace.ts
src/lib/db/: index.ts  workspaces.svelte.ts
src/lib/gemini/: commands.ts  index.ts  prompts.ts
src/lib/local/: db.ts  notes.svelte.ts  schema.ts  userworkspaces.svelte.ts  utils.ts  workspaces.svelte.ts
src/lib/supabase/: auth.ts  index.ts  storage.ts  user.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(nota)/: +layout.svelte  +layout.ts
src/routes/[notesid]/: +page.svelte
src/routes/auth-success/: +page.svelte
src/routes/note-preview-[id]/: +page.svelte
src/routes/playground/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/terms/: +page.svelte
src/tests/: recents.spec.ts  utils.spec.ts
(+395 files in other folders)
